Test for viewing

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -85,6 +85,8 @@ openhmis.cashier.bill.lineItems.error.quantityRequired=Please enter a quantity
 openhmis.cashier.bill.lineItems.error.itemDepartment=Item must belong to a department
 openhmis.cashier.bill.lineItems.error.itemChoose=Please choose an item
 openhmis.cashier.bill.lineItems.error.invalidItem=Invalid item selected
+billing.bill.error.null=Bill cannot be null
+billing.bill.error.lineItems.modified=Line items can only be modified when the bill is in PENDING state. Current status: {0}
 openhmis.cashier.bill.lineItems=Line Item
 openhmis.cashier.bill.lineItemsPlural=Line Items
 openhmis.cashier.bill.operationLineItems=Operation Line Items
